--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <p class="text-gray-300 text-lg mb-8 max-w-2xl mx-auto">
                 Ready to experience results you can rely on? Contact us today to discuss your project and discover how MarajTech can empower your business.
             </p>
-            <form class="contact-form max-w-xl mx-auto bg-gray-800 p-8 rounded-xl shadow-2xl" action="https://formspree.io/f/movwkjov" method="POST">
+            <form class="contact-form max-w-xl mx-auto bg-gray-800 p-8 rounded-xl shadow-2xl" action="https://formspree.io/f/mqabylrl" method="POST">
                 <input type="text" name="name" placeholder="Your Name" required class="w-full p-4 mb-4 bg-gray-700 text-white border border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-emerald-500 transition duration-300 placeholder-gray-400" />
                 <input type="email" name="email" placeholder="Your Email" required class="w-full p-4 mb-4 bg-gray-700 text-white border border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-emerald-500 transition duration-300 placeholder-gray-400" />
                 <textarea name="message" rows="6" placeholder="Your Message" required class="w-full p-4 mb-6 bg-gray-700 text-white border border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-emerald-500 transition duration-300 placeholder-gray-400"></textarea>
