--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         }
         
         .logo-container {
-            height: 60px;
+            height: 80px;
             display: flex;
             align-items: center;
         }
@@ -219,7 +219,7 @@
         
         @media (max-width: 640px) {
             .logo-container {
-                height: 45px;
+                height: 60px;
             }
         }
 
@@ -306,7 +306,7 @@
         <div class="container mx-auto max-w-6xl relative z-10 text-center">
             <h1 class="text-6xl md:text-8xl lg:text-9xl font-extrabold leading-tight mb-8">
                 <span class="text-gray-900">Innovating for</span><br />
-                <span class="text-[#1E90FF]">Results You Can Rely On</span>
+                <span class="text-[#0A1A3F]">Results You Can Rely On</span>
             </h1>
             <p class="text-2xl md:text-3xl mb-12 max-w-3xl mx-auto text-gray-700 leading-relaxed">
                 MarajTech delivers robust, reliable, and cutting-edge technology solutions tailored for your success.
