--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         }
         
         .gradient-text {
-            color: var(--accent-blue);
+            color: var(--text-dark);
         }
         
         .gradient-bg {
@@ -322,7 +322,7 @@
         <div class="container mx-auto max-w-6xl relative z-10 text-center">
             <h1 class="text-4xl md:text-6xl lg:text-7xl font-extrabold leading-tight mb-8">
                 <span class="text-gray-900">Innovating for</span><br />
-                <span class="text-[#0A1A3F]">Results You Can Rely On</span>
+                <span class="text-gray-900">Results You Can Rely On</span>
             </h1>
             <p class="text-lg md:text-xl lg:text-2xl mb-12 max-w-3xl mx-auto text-gray-700 leading-relaxed">
                 MarajTech delivers robust, reliable, and cutting-edge technology solutions tailored for your success.
@@ -348,8 +348,7 @@
                 </div>
                 <div class="md:w-1/2 flex justify-center items-center">
                     <div class="relative">
-                        <div class="absolute inset-0 bg-gradient-to-br from-blue-500/20 to-cyan-500/20 rounded-2xl blur-2xl"></div>
-                        <img src="https://placehold.co/600x400/1A2347/EAF0FF?text=Digital+Transformation" alt="Digital Transformation" class="relative rounded-2xl shadow-2xl object-cover w-full max-w-lg border border-blue-500/30">
+                        <img src="local-360.svg" alt="Digital Transformation" class="relative rounded-2xl shadow-md w-full max-w-lg h-auto object-contain">
                     </div>
                 </div>
             </div>
@@ -418,7 +417,7 @@
                 <div class="flex flex-col md:flex-row items-center gap-10">
                     <div class="md:w-2/5">
                         <div class="relative">
-                            <img src="https://placehold.co/300x300/F8FAFC/64748B?text=MarajTech+Solution" alt="MarajTech Solution" class="relative rounded-xl shadow-md w-full h-auto object-cover border border-gray-200">
+                            <img src="local-360.svg" alt="MarajTech Solution" class="relative rounded-xl shadow-md w-full h-auto object-contain">
                         </div>
                     </div>
                     <div class="md:w-3/5 text-center md:text-left">
