--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <meta property="og:url" content="https://www.marajtech.com" />
     <meta property="og:image" content="https://www.marajtech.com/logo-dark.svg" />
     <link rel="canonical" href="https://www.marajtech.com" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="marajtech.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="marajtech.ico" />
+    <link rel="apple-touch-icon" href="marajtech.ico" />
+    <link rel="icon" type="image/x-icon" href="marajtech.ico" sizes="16x16 32x32" />
+    <!-- Windows Tiles -->
+    <meta name="msapplication-TileImage" content="marajtech.ico" />
+    <meta name="msapplication-TileColor" content="#0A1A3F" />
+    <meta name="theme-color" content="#0A1A3F" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
