--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@
                 <a href="#about" class="text-gray-800 hover:text-[#1E90FF] transition duration-300 px-3 py-2 rounded-md hover:bg-gray-50">About</a>
                 <a href="#services" class="text-gray-800 hover:text-[#1E90FF] transition duration-300 px-3 py-2 rounded-md hover:bg-gray-50">Services</a>
                 <a href="#solutions" class="text-gray-800 hover:text-[#1E90FF] transition duration-300 px-3 py-2 rounded-md hover:bg-gray-50">Solutions</a>
+                <a href="blog.html" class="text-gray-800 hover:text-[#1E90FF] transition duration-300 px-3 py-2 rounded-md hover:bg-gray-50">Blog</a>
                 <a href="#testimonials" class="text-gray-800 hover:text-[#1E90FF] transition duration-300 px-3 py-2 rounded-md hover:bg-gray-50">Testimonials</a>
                 <a href="#team" class="text-gray-800 hover:text-[#1E90FF] transition duration-300 px-3 py-2 rounded-md hover:bg-gray-50">Team</a>
                 <a href="#contact" class="btn-primary text-white px-6 py-2 rounded-full font-semibold">Contact Us</a>
@@ -554,6 +555,7 @@
                     <img src="logo-dark.svg" alt="MarajTech Logo" class="h-12 w-auto" />
                 </div>
                 <div class="flex flex-wrap justify-center gap-6 mb-6 md:mb-0">
+                    <a href="blog.html" class="text-gray-700 hover:text-[#1E90FF] transition duration-300">Blog</a>
                     <a href="#" class="text-gray-700 hover:text-[#1E90FF] transition duration-300">Privacy Policy</a>
                     <a href="#" class="text-gray-700 hover:text-[#1E90FF] transition duration-300">Terms of Service</a>
                     <a href="#" class="text-gray-700 hover:text-[#1E90FF] transition duration-300">Support</a>
