--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog Admin | MarajTech</title>
+    <meta name="robots" content="noindex, nofollow" />
 
     <link rel="icon" type="image/x-icon" href="marajtech.ico" />
     <link rel="shortcut icon" type="image/x-icon" href="marajtech.ico" />
