--- a/blog-post.html
+++ b/blog-post.html
@@ -10,7 +10,7 @@
 
     <title>Blog Post | MarajTech</title>
     <meta name="description" content="Read the latest insights from MarajTech" />
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="noindex, follow" />
 
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://www.marajtech.com/blog-post.html" />
